'add-details-page'

--- a/pageDetails/PDP.html
+++ b/pageDetails/PDP.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/owl.theme.default.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/outProduct.css">
+    <link rel="stylesheet" href="../css/pdp.css">
 </head>
 <body>
 <div class="topBar">
@@ -122,126 +122,106 @@
 <div class="pannelAboutUs">
     <img src="../image/pannelaboutus.jpg"/>
 </div>
-<div class="container">
-    <div class="row">
-        <h2 class="titleProduct headerProduct text-center text-uppercase w-100 p-md-5 p-3 ">out product</h2>
-        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-3">export</h4>
-        <div class="carousel-wrap col-12">
-            <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/nightlife/"/>
-                    <span class="img-text">nightlife</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/abstract/"/>
-                    <span class="img-text">abstract</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/animals/"/>
-                    <span class="img-text">animals</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/nature/"/>
-                    <span class="img-text">nature</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/business/"/>
-                    <span class="img-text">business</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/cats/"/>
-                    <span class="img-text">cats</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/city/"/>
-                    <span class="img-text">city</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/food/"/>
-                    <span class="img-text">food</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/fashion/"/>
-                    <span class="img-text">fashion</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/people/"/>
-                    <span class="img-text">people</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/sports/"/>
-                    <span class="img-text">sports</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/technics/"/>
-                    <span class="img-text">technics</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/transport/"/>
-                    <span class="img-text">transport</span>
-                </div>
+
+<div class="contentPDP">
+    <div class="container-fluid">
+        <div class="row d-flex">
+            <div class="imagePDP col-12 col-md-6 justify-content-center align-content-center pt-3 pt-md-5 pb-3 pb-md-5 h-auto position-relative">
+                <h2 class="titleImage text-center text-uppercase">black peper</h2>
+                <img src="../image/blackpeper.jpg" class="p-5 imgPDP" id="imgPDP"/>
             </div>
-        </div>
-        <h4 class="subtitleProduct headerProduct text-center text-uppercase w-100 pt-md-5 pt-3">import</h4>
-        <div class="carousel-wrap col-12 pb-md-5 pb-3">
-            <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/nightlife/"/>
-                    <span class="img-text">nightlife</span>
+            <div class="col-12 col-md-6 p-5">
+                <h2 class="titleTable text-center text-uppercase">SPECIFICATIONS</h2>
+                <div class="tableDetails pt-5 pb-5">
+                    <div class="tableDetailsProduct  pr-5 pl-5">
+                        <table class="table table-hover">
+                            <tbody>
+                            <tr class="first row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            <tr class="row">
+                                <td class="col-6">Doe</td>
+                                <td class="col-6">Doe</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/abstract/"/>
-                    <span class="img-text">abstract</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/animals/"/>
-                    <span class="img-text">animals</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/nature/"/>
-                    <span class="img-text">nature</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/business/"/>
-                    <span class="img-text">business</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/cats/"/>
-                    <span class="img-text">cats</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/city/"/>
-                    <span class="img-text">city</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/food/"/>
-                    <span class="img-text">food</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/fashion/"/>
-                    <span class="img-text">fashion</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/people/"/>
-                    <span class="img-text">people</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/sports/"/>
-                    <span class="img-text">sports</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/technics/"/>
-                    <span class="img-text">technics</span>
-                </div>
-                <div class="item">
-                    <img src="http://lorempixel.com/640/480/transport/"/>
-                    <span class="img-text">transport</span>
+                <div class="contactFor text-center w-100">
+                    <h2>Contact for best Price</h2>
+                    <a href="#" class="btn">
+                        <span class="btn-inner text-white">Contact Us</span>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 </body>
 
 <div class="productCategory">
@@ -385,28 +365,25 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/index.js"></script>
 <script>
-    $('.owl-carousel').owlCarousel({
-        margin: 50,
-        nav: true,
-        navText: ["<div class='nav-btn prev-slide'></div>", "<div class='nav-btn next-slide'></div>"],
-        autoplay: true,
-        autoplayTimeout: 4000,
-        lazyLoad: true,
-        autoPlay: 2500,
-        lazyLoadEager: 1000,
-        smartSpeed: 1000,
-        responsive: {
-            0: {
-                items: 1
-            },
-            600: {
-                items: 3
-            },
-            1000: {
-                items: 4
+    function resizeHeight() {
+        var divTable = $('.tableDetailsProduct').height();
+        if ($(window).width() > 767) {
+            var divHeight = $('.imgPDP').height();
+            if (divHeight != divTable) {
+                if (divTable > divHeight) {
+                    $('.tableDetailsProduct').css('height', (divHeight) + 'px');
+                }
             }
         }
-    });
+        else {
+            if (divTable > 450) {
+                $('.tableDetailsProduct').css('height', (450) + 'px');
+            }
+        }
+    }
+
+    $(window).resize(resizeHeight)
+    resizeHeight()
 
 </script>
 </html>
