--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -57,9 +57,9 @@
         <div class="container">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-light w-100" id="navbar">
-                    <a href="/" class="navbar-brand"><img src="./image/artboard-2-copy.png"></a>
+                    <a href="/" class="navbar-brand"><img src="../image/artboard-2-copy.png"></a>
                     <span class="ml-auto imgSearchMobile p-3">
-                            <img src="./image/search.svg" alt="" class="img-fluid"></span>
+                            <img src="../image/search.svg" alt="" class="img-fluid"></span>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -104,10 +104,10 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pageDetails/about.html">About Us</a>
+                                <a class="nav-link" href="../pageDetails/about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pageDetails/contact.html">Contact</a>
+                                <a class="nav-link" href="../pageDetails/contact.html">Contact</a>
                             </li>
 
                             <li class="nav-item">
@@ -116,7 +116,7 @@
                         </ul>
                     </div>
                     <span class="ml-auto imgSearch">
-                            <img src="./image/search.svg" alt="" class="img-fluid"></span>
+                            <img src="../image/search.svg" alt="" class="img-fluid"></span>
                 </nav>
             </div>
         </div>
@@ -130,7 +130,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="./image/group-18.jpg" alt="First slide">
+                    <img class="d-block w-100" src="../image/group-18.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Lorem Ipsum is simply</h2>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the
@@ -468,8 +468,8 @@
     </div>
 </footer>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
-<script src="./js/owl.carousel.min.js"></script>
-<script src="./js/index.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/index.js"></script>
 <script>
     function renderOurProduct() {
         window.location.assign("./pageDetails/outProduct.html");
