--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -104,10 +104,10 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pageDetails/about.html">About Us</a>
+                                <a class="nav-link" href="./pageDetails/about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pageDetails/contact.html">Contact</a>
+                                <a class="nav-link" href="./pageDetails/contact.html">Contact</a>
                             </li>
 
                             <li class="nav-item">
