--- a/pageDetails/category1.html
+++ b/pageDetails/category1.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/owl.theme.default.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/pdp.css">
+    <link rel="stylesheet" href="../css/category1.css">
 </head>
 <body>
 <div class="topBar">
@@ -122,79 +122,30 @@
 <div class="pannelAboutUs">
     <img src="../image/pannelaboutus.jpg"/>
 </div>
-
-<div class="contentPDP">
-    <div class="container-fluid">
-        <div class="row d-flex">
-            <div class="imagePDP col-12 col-md-6 justify-content-center align-content-center pt-3 pt-md-5 pb-3 pb-md-5 h-auto position-relative">
-                <h2 class="titleImage text-center text-uppercase">black peper</h2>
-                <img src="../image/blackpeper.jpg" class="p-5 imgPDP" id="imgPDP"/>
-            </div>
-            <div class="col-12 col-md-6 p-5">
-                <h2 class="titleTable text-center text-uppercase">SPECIFICATIONS</h2>
-                <div class="tableDetails pt-5 pb-5">
-                    <div class="tableDetailsProduct  pr-5 pl-5">
-                        <table class="table table-hover">
-                            <tbody>
-                            <tr class="first row">
-                                <td class="col-6">Quality</td>
-                                <td class="col-6">Silky Polished and Sortex clean Non</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Length of Rice</td>
-                                <td class="col-6">4.50 mm before cookin</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Broken</td>
-                                <td class="col-6">5% maximum</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Damage & Discol</td>
-                                <td class="col-6">2%</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Black grains</td>
-                                <td class="col-6">Nil</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Foreign matter</td>
-                                <td class="col-6">1%</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Yellow Grains</td>
-                                <td class="col-6">1.5% maximum</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Chalky Grains</td>
-                                <td class="col-6">4-5% maximum</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Taste</td>
-                                <td class="col-6">Sweet</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Moisture</td>
-                                <td class="col-6">14% maximum</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="col-6">Insect/Weevils</td>
-                                <td class="col-6">Nil</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="contactFor text-center w-100">
-                    <h2>Contact for best Price</h2>
-                    <a href="#" class="btn">
-                        <span class="btn-inner text-white">Contact Us</span>
-                    </a>
+<div class="categoryPanel">
+    <h2 class="text-uppercase text-center w-100 pt-5 header">Machinery & Raw Materials</h2>
+    <div class="categoryDescription">
+        <div class="container">
+            <div class="row">
+                <div class="description p-5">
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when
+                        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                        distribution of letters, as opposed to using 'Content here, content here',
+                        <br>
+                        <br>
+                        Making it look like readable English. Many desktop publishing packages and web page editors now
+                        use
+                        Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web
+                        sites
+                        still in their infancy. Various versions have evolved over the years, sometimes by accident,
+                        sometimes on purpose (injected humour and the like).</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</body>
+
 
 <div class="productCategory">
     <div class="container">
@@ -285,6 +236,8 @@
         </div>
     </div>
 </div>
+</body>
+
 <footer>
     <div class="footerContent container">
         <div class="row">
@@ -337,22 +290,5 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/index.js"></script>
 <script>
-    function resizeHeight() {
-        var divTable = $('.tableDetailsProduct').height();
-        if ($(window).width() > 767) {
-            var divHeight = $('.imgPDP').height();
-            if (divHeight != divTable) {
-                $('.tableDetailsProduct').css('height', (divHeight) + 'px');
-            }
-        }
-        else {
-            $('.tableDetailsProduct').css('height', (450) + 'px');
-        }
-    }
-
-    //$(window).onload(resizeHeight);
-    $(window).resize(resizeHeight);
-    resizeHeight();
-
 </script>
 </html>
