--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -59,7 +59,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light w-100" id="navbar">
                     <a href="/" class="navbar-brand"><img src="../image/artboard-2-copy.png"></a>
                     <span class="ml-auto imgSearchMobile p-3">
-                            <img src="../image/search.svg" alt="" class="img-fluid"></span>
+                            <img src="../image/search.svg" alt="" class="img-fluid w-100"></span>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -330,7 +330,7 @@
         </div>
     </div>
 </div>
-<div class="productCategory pl-5 pr-5">
+<div class="productCategory container-fluid pl-5 pr-5">
     <div class="headerCategory flex-column">
         <img src="../image/categoryImg.svg" alt="">
         <span><h2>Product Categories</h2></span>
