--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -59,7 +59,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light w-100" id="navbar">
                     <a href="/" class="navbar-brand"><img src="../image/artboard-2-copy.png"></a>
                     <span class="ml-auto imgSearchMobile p-3">
-                            <img src="../image/search.svg" alt="" class="img-fluid w-100"></span>
+                            <img src="../image/search.svg" alt="" class="img-fluid"></span>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -276,7 +276,7 @@
     <div class="container-fluid p-0">
         <section class="no-gutter align-items-center contentNormal">
             <div class="text-center d-flex align-items-center">
-                <img class="img-fluid position-relative" src="../image/panelContent.png" alt="">
+                <img class="position-relative w-100" src="../image/panelContent.png" alt="">
                 <div class="position-absolute my-auto content">
                     <h1 class="text-white">About Seven Hills Trading LTD Company</h1>
                     <p class="text-white">It is a long established fact that a reader will be distracted by the
