'fix-some-issue'

--- a/pageDetails/homepage.html
+++ b/pageDetails/homepage.html
@@ -131,7 +131,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="../image/group-18.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block mr-auto ml-auto blockCenterdiv">
                         <h2>Lorem Ipsum is simply</h2>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the
                             1500s,
@@ -170,12 +170,10 @@
         <span class="btn-inner text-white">Contact Us</span>
     </a>
 </div>
-<div class="panelServies">
+<div class="panelServies p-3 p-md-5">
     <div class="container">
-        <div class="row align-items-center">
-            <div class="title">
-                <h1>Our Services</h1>
-            </div>
+        <h1 class="p-3">Our Services</h1>
+        <div class="row align-items-center p-3">
             <div class="col">
                 <img src="../image/artboard-1-copy.png" alt="" class="img-fluid"/>
                 <h3>Import</h3>
@@ -197,31 +195,32 @@
     </div>
     <div class="container">
         <section class="expertiseContent row no-gutter align-items-center">
-            <div class="col col-md-4 text-center d-flex align-items-center product">
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
                 <img class="img-fluid position-relative mx-auto" src="../image/group-19-copy.png" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
-            </div>
-            <div class="col col-md-4 text-center d-flex align-items-center product">
-                <img class="img-fluid position-relative mx-auto" src="../image/india1.jpg" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Indian Spicies</h3>
-            </div>
-            <div class="col col-md-4 text-center d-flex align-items-center product">
-                <img class="img-fluid position-relative mx-auto" src="../image/grain.jpg" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Grains</h3>
-            </div>
-            <div class="col col-md-4 text-center d-flex align-items-center product">
-                <img class="img-fluid position-relative mx-auto" src="../image/group-19-copy.png" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Agricultural
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Agricultural
                     Chemical Products </h3>
             </div>
-            <div class="col col-md-4 text-center d-flex align-items-center product">
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
                 <img class="img-fluid position-relative mx-auto" src="../image/india1.jpg" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Agricultural
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Indian Spicies</h3>
+            </div>
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
+                <img class="img-fluid position-relative mx-auto" src="../image/grain.jpg" alt="">
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Grains</h3>
+            </div>
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
+                <img class="img-fluid position-relative mx-auto" src="../image/group-19-copy.png" alt="">
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Agricultural
+                    Chemical Products </h3>
+            </div>
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
+                <img class="img-fluid position-relative mx-auto" src="../image/india1.jpg" alt="">
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Agricultural
                     Chemical Products</h3>
             </div>
-            <div class="col col-md-4 text-center d-flex align-items-center product">
+            <div class="col col-md-4 text-center d-flex align-items-center product pb-md-5">
                 <img class="img-fluid position-relative mx-auto" src="../image/grain.jpg" alt="">
-                <h3 class="w-100 position-absolute text-white my-auto">Agricultural
+                <h3 class="position-absolute text-white mr-auto ml-auto h3CenterDiv">Agricultural
                     Chemical Products</h3>
             </div>
         </section>
@@ -306,7 +305,7 @@
         </section>
     </div>
 </div>
-<div class="panelFounder">
+<div class="panelFounder pt-4">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 aboutFounder jumbotron">
@@ -330,14 +329,15 @@
         </div>
     </div>
 </div>
-<div class="productCategory container-fluid pl-5 pr-5">
-    <div class="headerCategory flex-column">
+<div class="productCategory container-fluid  p-4">
+    <div class="headerCategory flex-column p-md-2">
         <img src="../image/categoryImg.svg" alt="">
         <span><h2>Product Categories</h2></span>
     </div>
     <div class="contentCategory d-flex">
         <ul class="list-group col-md-twenty productDetails p-2">
-            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and Allied Products</li>
+            <li class="list-group-item active headerGroupItem" data-toggle="collapse">Food Grains and Allied Products
+            </li>
             <div class="listItemCollapse1">
                 <li class="list-group-item">Pulses</li>
                 <li class="list-group-item">Lentils</li>
